fixed canvas show. not ideal, but it was too much

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,6 +1,4 @@
-
 .btn-white {
-
   background-color: white;
   color: black;
   font-weight: bold;
@@ -29,10 +27,9 @@
   border-radius: 0px;
 }
 
-
 .btn-ghost {
   color: black;
-  border: 0.4px solid #4A4A4A;
+  border: 0.4px solid #4a4a4a;
   padding: 23px 24px;
   border-radius: 0px;
   // font-weight: lighter;
@@ -42,7 +39,7 @@
 
 .btn-ghost:hover {
   opacity: 1;
-  color:#4a4a4a;
+  color: #4a4a4a;
   text-decoration: none;
 }
 
@@ -50,12 +47,12 @@
   color: white;
   padding: 8px 24px;
   border-radius: 4px;
-  background: #1EDD88;
+  background: #1edd88;
   transition: background 0.3s ease;
 }
 
 .btn-flat:hover {
-  background: #1BCB7F;
+  background: #1bcb7f;
   color: white;
 }
 
@@ -64,13 +61,13 @@
   padding: 8px 24px;
   border-radius: 4px;
   font-weight: bold;
-  background: linear-gradient(#167FFB, #0F60C4);
+  background: linear-gradient(#167ffb, #0f60c4);
   transition: background 0.3s ease;
-  border: 1px solid #0F60C4;
+  border: 1px solid #0f60c4;
 }
 
 .btn-gradient:hover {
-  background: linear-gradient(#147EFF, #0F67DA);
+  background: linear-gradient(#147eff, #0f67da);
   color: white;
 }
 
@@ -79,7 +76,7 @@
   font-weight: bold;
   margin-bottom: 10px;
   padding-vertical: 12px;
-  padding-left:12px;
+  padding-left: 12px;
   width: 180px;
   margin: 0;
 }
@@ -99,7 +96,6 @@
 }
 
 .btn_white_show {
-
   @extend .btn-ghost;
   font-weight: lighter;
   margin: 10px 15px;
@@ -111,7 +107,6 @@
 }
 
 .btn_white_show_normal {
-
   @extend .btn-ghost;
   font-weight: lighter;
   margin: 10px 15px;
@@ -122,14 +117,14 @@
   // height: fit-content;
 }
 
- .btn_white_show:hover {
+.btn_white_show:hover {
   cursor: pointer;
- }
+}
 
 .btn-helper {
   // @extend .btn-ghost;
   // font-weight: bold;
-  border: 0.4px solid #4A4A4A;
+  border: 0.4px solid #4a4a4a;
   padding: 23px 24px;
   border-radius: 0px;
   width: 20%;
@@ -159,7 +154,3 @@
   font-size: 22px;
   padding: 18.5px;
 }
-
-
-
-
