--- a/app/assets/stylesheets/projects/_index.scss
+++ b/app/assets/stylesheets/projects/_index.scss
@@ -12,7 +12,7 @@
   display: block;
   background-color: white;
   color: black;
-  margin: 36px 50px;
+  margin: 50px 50px;
   padding: 24px 150px;
   min-height: 90vh;
 }
